[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Home/Deck.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/UserDeck.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/buttons/edit.png" type="Texture" id=3]

[node name="UserDeck" instance=ExtResource( 1 )]
margin_right = 160.0
margin_bottom = 208.0
script = ExtResource( 2 )

[node name="EditButton" type="TextureButton" parent="." index="1"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_right = -8.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
expand = true

[connection signal="gui_input" from="Cards/TopCard" to="." method="_on_TopCard_gui_input"]
[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]
